# s2-flow-research

./: .gitignore  CITATION.cff  FORMAL_STATUS.md  LICENSE  MANIFEST.sha256  Makefile  PACKAGE_CONTENTS.md  README.md  REPOSITORY_AUDIT.md  REPRODUCIBILITY.md  RUNBOOK.md  VALIDATION.md  pyproject.toml  requirements-dev.txt  requirements.txt
archive/: LICENSE_with_unresolved_merge_conflict.txt  MANIFEST_add1.sha256  MANIFEST_add2.sha256  README_add1.md
benchmarks/: benchmark_solver.py
certificates/: flower_J11_exact_dyadic.npz  flower_J13_exact_dyadic.npz  flower_J15_exact_dyadic.npz  flower_J17_exact_dyadic.npz  flower_J19_exact_dyadic.npz  flower_J21_exact_dyadic.npz  flower_J23_exact_dyadic.npz  flower_J25_exact_dyadic.npz  flower_J27_exact_dyadic.npz  flower_J29_exact_dyadic.npz  flower_J31_exact_dyadic.npz  flower_J33_exact_dyadic.npz  flower_J35_exact_dyadic.npz  flower_J37_exact_dyadic.npz  flower_J39_exact_dyadic.npz  flower_J41_exact_dyadic.npz  flower_J5_exact_dyadic.npz  flower_J7_exact_dyadic.npz  flower_J9_exact_dyadic.npz  interval_proof_certificate.json  numerical_sweep.csv  verification_G1001.json
configs/: default.yaml  optimizer.yaml  sdp.yaml  search.yaml
docs/: Goldberg_Snarks_S2_Flow_Theorem_en.docx  S2_flow_addendum_equivariance.docx  S2_flow_equivariance_rigorous_addendum_en.docx  S2_flow_partial_theorems_and_structural_lemmas_ru.docx  S2_flow_proof_program_ru.docx  S2_flow_stage1_report.docx  S2_flow_stage2_flower_snark_theorem.docx  S2_flow_stage2_flower_snark_theorem_full.docx  algorithms.md  bibliography.bib  conjectures.md  experiments.md  (+6 more)
(+120 files in other folders)
